extract github config from code

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <!--                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='7f316909bf70d1eaa2b2',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('redirectUri')},scope='user',state=1)}">登录</a>-->
+                        <!--                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='Ov23liZcPZaAN0A5IdG1',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('redirectUri')},scope='user',state=1)}">登录</a>-->
                         <a href="#" data-toggle="modal" data-target="#myModal">登录</a>
                     </li>
 
