--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -3,7 +3,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <body>
-
 <div th:fragment="nav">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -14,36 +13,16 @@
                 </button>
                 <a class="navbar-brand" href="/">码问</a>
             </div>
-
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left" action="/" method="get">
+                <form class="navbar-form navbar-left">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="search" placeholder="搜索问题">
+                        <input type="text" class="form-control" placeholder="搜索问题">
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
-                <ul class="nav navbar-nav">
-                    <script>
-                        function clickNav(label) {
-                            gtag('event', 'click', {
-                                'event_category': 'LINK',
-                                'event_label': label,
-                                'transport_type': 'NAV'
-                            })
-                        }
-                    </script>
-                    <li th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('NAV')}">
-                        <a th:href="${ad.url}" th:text="${ad.title}" th:onclick="clickNav([[${ad.title}]])"
-                           target="_blank"></a>
-                    </li>
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li th:if="${session.user != null}">
-                        <a href="/publish">提问</a>
-                    </li>
-                    <li><a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a>
-                    </li>
-                    <li class="dropdown" th:if="${session.user != null}">
+                    <li th:if="${session.user!=null}"><a href="/publish">提问</a></li>
+                    <li class="dropdown" th:if="${session.user!=null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
                             <span th:text="${session.user.getName()}"></span>
@@ -51,41 +30,18 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的问题</a></li>
+                            <li><a href="#">个人资料</a></li>
                             <li><a href="/logout">退出登录</a></li>
                         </ul>
                     </li>
-                    <li th:if="${session.user == null}">
-                        <!--                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='Ov23liZcPZaAN0A5IdG1',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('redirectUri')},scope='user',state=1)}">登录</a>-->
-                        <a href="#" data-toggle="modal" data-target="#myModal">登录</a>
+                    <li th:if="${session.user==null}">
+                        <a href=" https://github.com/login/oauth/authorize?client_id=Ov23liZcPZaAN0A5IdG1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
                     </li>
-
                 </ul>
+
             </div>
         </div>
     </nav>
-
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document" style="margin-top: 200px;width: 300px;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">登录注册</h4>
-                </div>
-                <div class="modal-body" style="text-align:center">
-                    <a th:href="@{https://gitee.com/oauth/authorize(client_id='e542c33bb680ea612ce21b8efb397274eae34833553bc80bc9ff881425d1b883',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('giteeRedirectUri')},response_type=code)}">
-                        <img src="/images/gitee.png">
-                    </a>
-                    <a th:href="@{https://github.com/login/oauth/authorize(client_id='7f316909bf70d1eaa2b2',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('githubRedirectUri')},scope='user',state=1)}">
-                        <img src="/images/github.png">
-                    </a>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 </body>
